Added SMP support methods to OtrConnection.

--- a/Esp.ThirdParty.LibOtr.Managed/Esp.ThirdParty.LibOtr.Managed.csproj
+++ b/Esp.ThirdParty.LibOtr.Managed/Esp.ThirdParty.LibOtr.Managed.csproj
@@ -34,6 +34,12 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>OtrManaged.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,6 +59,9 @@
       <Project>{3a950204-4088-4728-8d5f-902ddbf87873}</Project>
       <Name>Esp.ThirdParty.LibOtr</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OtrManaged.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
